@@ -1,6 +1,7 @@
 package com.rjhtctn.finch_backend.service;
 
 import com.rjhtctn.finch_backend.dto.finch.FinchResponseDto;
+import com.rjhtctn.finch_backend.dto.user.UserResponseDto;
 import com.rjhtctn.finch_backend.mapper.FinchMapper;
 import com.rjhtctn.finch_backend.model.*;
 import com.rjhtctn.finch_backend.repository.FinchRepository;
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.time.Instant;
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,28 +22,45 @@ public class FeedService {
     private final RefinchRepository refinchRepository;
     private final UserService userService;
     private final LikeService likeService;
+    private final FollowService followService;
 
     public FeedService(
             FinchRepository finchRepository,
             RefinchRepository refinchRepository,
             UserService userService,
-            LikeService likeService
+            LikeService likeService,
+            FollowService followService
     ) {
         this.finchRepository = finchRepository;
         this.refinchRepository = refinchRepository;
         this.userService = userService;
         this.likeService = likeService;
+        this.followService = followService;
     }
 
     @Transactional(readOnly = true)
     public List<FinchResponseDto> getGlobalFeed(UserDetails userDetails) {
         User currentUser = userService.findUserByUsername(userDetails.getUsername());
 
-        return finchRepository.findByParentFinchIsNull(Sort.by(Sort.Direction.DESC, "createdAt"))
+        Set<UUID> followingIds = followService.getFollowing(currentUser).stream()
+                .map(UserResponseDto::getId)
+                .collect(Collectors.toSet());
+
+        Predicate<User> canSeeContent = author ->
+                !author.isPrivate() ||
+                        author.getId().equals(currentUser.getId()) ||
+                        followingIds.contains(author.getId());
+
+        List<Finch> finches = finchRepository.findAllRootFinchesNative()
                 .stream()
-                .filter(f -> !f.getUser().isPrivate())
-                .map(f -> enrich(FinchMapper.toFinchResponseWithoutReplies(f), f, currentUser))
-                .collect(Collectors.toList());
+                .filter(finch -> canSeeContent.test(finch.getUser()))
+                .toList();
+
+        List<ReFinch> refinches = refinchRepository.findAll().stream()
+                .filter(refinch -> canSeeContent.test(refinch.getUser()))
+                .toList();
+
+        return buildFeedFromSources(finches, refinches, currentUser);
     }
 
     @Transactional(readOnly = true)
@@ -53,8 +72,8 @@ public class FeedService {
                 .collect(Collectors.toList());
         followingUsers.add(currentUser);
 
-        List<Finch> finches = finchRepository.findByUser_UsernameIn(
-                followingUsers.stream().map(User::getUsername).collect(Collectors.toList()),
+        List<Finch> finches = finchRepository.findByUserInAndParentFinchIsNull(
+                followingUsers,
                 Sort.by(Sort.Direction.DESC, "createdAt")
         );
 
@@ -62,7 +81,12 @@ public class FeedService {
                 .filter(r -> followingUsers.contains(r.getUser()))
                 .toList();
 
+        return buildFeedFromSources(finches, refinches, currentUser);
+    }
+
+    private List<FinchResponseDto> buildFeedFromSources(List<Finch> finches, List<ReFinch> refinches, User currentUser) {
         List<FeedItem> all = new ArrayList<>();
+
         finches.forEach(f -> all.add(new FeedItem(f, f.getCreatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant())));
         refinches.forEach(r -> all.add(new FeedItem(r.getFinch(), r.getCreatedAt())));
 
